Installed spatie/laravel-query-builder and added first iteration of the Device API
