# routes/api.php
@@ -34,3 +34,7 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
 });
 */
+
+
+
+Route::apiResource('/device', 'DeviceController'); 
